# rider-match-backend

./: build.sh  pyproject.toml  render.yaml  requirements.txt  todo.txt
apis/: views.py
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_created_at_booking_type_alter_booking_guests.py  0003_alter_booking_type.py  0004_alter_booking_guests.py  0005_alter_booking_pickup_time.py  0006_booking_dropoff_location_booking_pickup_location.py  0007_alter_booking_guests.py  0008_remove_booking_type_remove_booking_user_and_more.py  0009_remove_booking_passenger_and_more.py  0010_rename_passenger_booking_locations_and_more.py  0011_alter_booking_created_at_alter_booking_locations_and_more.py  0012_booking_arrival_time.py  0013_booking_starting_point_alter_booking_driver_name.py  0014_booking_map_url.py  0015_alter_booking_driver_name_and_more.py  0016_alter_booking_map_url.py  0017_booking_departure_time.py  0018_remove_booking_arrival_time_and_more.py  0019_booking_starting_point.py
config/: authentication.py  settings.py  urls.py
locations/: admin.py  models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_location_address.py  0002_remove_location_user_location_first_name_and_more.py  0003_location_user.py  0004_location_date_time.py  0005_rename_address_location_dropoff_location_and_more.py  0006_alter_location_dropoff_location_and_more.py  0007_alter_location_dropoff_location_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+4 files in other folders)
